<resources>
    <string name="app_name" translatable="false">Inboxy</string>
    <string name="action_settings">Settings</string>
    <string name="action_archived">Archived</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_search">search</string>
    <string name="permission_Read_SMS_rationale">This is a critical permission without which this app can\'t function. You can go-to \'Permissions\' within settings and give <b>SMS</b> permission.</string>
    <string name="permission_READ_SMS_denial">EXIT</string>
    <string name="permission_READ_SMS_OK">RE-TRY. GO TO SETTINGS</string>
    <string name="ok">OK</string>
    <string name="denialMessage">To continue,give SMSLite access to SMS</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="title_primary">Primary</string>
    <string name="title_finance">Finance</string>
    <string name="title_promotions">Promotions</string>
    <string name="title_updates">Updates</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibration">Vibration</string>

    <string name="pref_title_notification_LED">Notification LED</string>

    <string name="pref_title_notification__ringtone">Notification ringtone</string>

    <string name="pref_title_notification_sound">Notification sound</string>

    <string name="pref_make_Default_Sms_Key">Default Sms</string>

    <string name="send_to">Share text to</string>

    <string name="playstore_link">https://play.google.com/store/apps/details?id=in.smslite</string>

    <string name="title_activity_archive">Archive</string>

    <string name="title_call_icon">call_icon</string>

    <string name="help_feedback">help and feedback</string>

    <string name="make_default_app">Make default app</string>

    <string name="block_contact">Block Contact</string>
    <!--<string name="permlab_deadlyActivity">label</string>
    <string name="permdesc_deadlyActivity">description</string>
    <string name="groupLabel">group label</string>
    <string name="groupDescription">group description</string>-->

    <string-array name="finance_short_codes">
        <item>axisbk</item>
        <item>hdfcbk</item>
        <item>icicib</item>
        <item>unionb</item>
        <item>kotakb</item>
        <item>canbnk</item>
        <item>corpbk</item>
        <item>sbiinb</item>
        <item>idbibk</item>
        <item>citibk</item>
        <item>dbsbnk</item>
        <item>sbipsg</item>
    </string-array>

    <string-array name="OTP_keyword">
        <item>code</item>
        <item>pin</item>
        <item>pin:</item>
        <item>otp</item>
        <item>[(]{1}otp[)]{1}</item>
        <item>onetime password</item>
        <item>one time password</item>
        <item>verification</item>
    </string-array>

    <string-array name="widget_keyword">
        <item>booking</item>
        <item>delivered</item>
        <item>pnr</item>
    </string-array>

    <string name="choose_notification_category_title">Notify me for</string>
    <string name="pref_sms_notification_title">Notifications</string>
    <string name="pref_key_notification">notifications_new_message</string>
    <string name="pref_key_category">category_list</string>
    <string name="pref_key_notification_category">pref_key_notifications_settings</string>
    <string name="pref_key_notification_vibration">vibrate</string>
    <string name="pref_summary_notification_vibration">Vibrate when new messages are received</string>
    <string name="pref_key_notification_LED">notification LED</string>
    <string name="pref_summary_notification_ringtone">Select a notification ringtone</string>
    <string name="pref_key_notification_sound">notification sound</string>


    <string-array name="notification_category">
        <item>Primary</item>
        <item>Finance</item>
        <item>Promotion</item>
        <item>Updates</item>
    </string-array>

    <string-array name="default_notification_category">
        <item>Primary</item>
        <item>Finance</item>
        <item>Updates</item>
        <item>Promotion</item>
    </string-array>

    <string name="empty_primary_text">Primary inbox is empty</string>
    <string name="empty_finance_text">You don\'t have any financial messages</string>
    <string name="empty_promotion_text">You don\'t have any promotional messages</string>
    <string name="empty_update_text">You don\'t have any updates</string>

    <string name="title_contact_detail">contact detail</string>
    <string name="address_id">address_id</string>

    <!-- For debugging: Dialog box title indicating there's a situation where data has unexpectedly changed -->
    <string name="error_state">Inconsistent state</string>
    <!-- For debugging: Dialog box text indicating there's a situation where data has unexpectedly changed -->
    <string name="error_state_text">The state of threads and recipients is inconsistent. Please capture a bug report and report it via http://go/droidanizer </string>
    <!--Positive action button-->
    <string name="yes">Yes</string>
    <string name="messagelist_sender_self">Me</string>

    <string name="permission_Read_CONTACTS_rationale">Without this permission, the app is unable to show name and picture of the contact. You can go-to \'Permissions\' within settings and give <b>Contacts</b> permission. </string>
    <string name="permission_READ_CONTACTS_OK">RE-TRY. GO TO SETTINGS</string>
    <string name="permission_READ_CONTACTS_denial">Exit</string>

    <string name="key_sms_categorized">sms_categorized</string>
    <string name="share_message">Let me recommend a smart sms app for your smart phone.\n\n </string>
    <string name="title_share">Share</string>
    <string name="title_rateus">Rate Us</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_contact">New Conversation</string>

    <string name="title_menu_main_archive">Archive</string>
    <string name="dialog_option">dialog option</string>
    <string name="dialog_checkbox">dialog checkbox</string>

</resources>
