<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
      tools:context="in.smslite.activity.MainActivity">
    <item
    android:id="@+id/menu_share"
    android:title="@string/title_share"
    app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_rate_us"
        android:title="@string/title_rateus"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/title_setting"
        app:showAsAction="collapseActionView"/>

    <item android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        android:id="@+id/menu_search_msg_id"
        android:iconTint="@color/white_pure"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_mark_all_read"
        app:showAsAction="never"
        android:title="Mark All As Read"/>

    <item android:id="@+id/menu_blocked"
        android:title="Blocked"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_archive"
        app:showAsAction="never"
        android:title="@string/title_menu_main_archive"/>
</menu>
